--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -213,7 +213,7 @@
                                         <li class="checkbox">
                                             <label>
                                                 <input class="mutation-checkbox" type="checkbox" name="elements-selected" data-value-name="{{ attr.value }}" data-value-displ-name="{{ attr.name }}">
-                                                {{ attr.name }} <span class="count">({{ attr.count }})</span>
+                                                {{ attr.name }} <!-- <span class="count">({{ attr.count }})</span> -->
                                             </label>
                                         </li>
                                     {% endfor %}
