--- a/templates/GenespotRE/user_gcp_list_modals.html
+++ b/templates/GenespotRE/user_gcp_list_modals.html
@@ -51,4 +51,31 @@
         </div>
     </div>
 </div>
+
+<!-- Refresh Service Account Modal -->
+<div class="modal fade" id="refresh-sa-modal-{{ service_account.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-project-header" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Refresh this Service Account?</h4>
+            </div>
+            <form id="delete-project" method="POST" action="{% url 'register_sa' user.id %}">
+                <div class="modal-body">
+                    {% csrf_token %}
+                    <p>
+                        <em>Note</em>: By refreshing this Service Account, you are extending its access to the specified dataset.
+                    </p>
+                    <input type="hidden" name="gcp_id" value="{{ project.project_id }}" />
+                    <input type="hidden" name="user_sa" value="{{ service_account.service_account }}" />
+                    <input type="hidden" name="datasets" value="{{ service_account.authorized_dataset_id }}" />
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" value="Refresh" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endfor %}
