-> Check/uncheck all progress

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -8,6 +8,10 @@
     .total-samples
         margin-top: 0px
     #filter-panel
+        .checks
+            float: right
+            display: block
+            width: 50%
         #paste-in-genes-tokenfield
             width: 100% !important
         .tabpanel
