--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -92,7 +92,7 @@
                                                             </label>
                                                         </li>
                                                     {% elif forloop.counter0 == 6 and num_more > 0 %}
-                                                        <a class="show-more">{{ num_more }} more</a>
+                                                        <p class="more-checks"><a class="show-more">{{ num_more }} more</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
                                                         <li class="extra-values checkbox" style="display:none;">
                                                             <label title="{{ v.value|get_tooltip_text:attr }}">
                                                                 <input type="checkbox" name="elements-selected" data-value-name="{{ v.value }}"
@@ -115,7 +115,7 @@
                                                     {% endif %}
                                                 {% endfor %}
                                                 {% if num_more > 0 %}
-                                                    <a class="show-less" style="display:none;">less</a>
+                                                    <p class="less-checks" style="display: none;"><a class="show-less">less</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
                                                 {% endif %}
                                             {% endwith %}
                                         </ul>
