-> Specific Mutation Type checkboxes are now always enabled -> The Category now defaults to 'Any' once a gene is chosen -> Choosing 'Any' will remove any previously specified individual types -> Choosing 'non-silent' will remove any previously specified individual types not part of the non-silent category, and add in those which are -> Choosing user-specified will switch to 'invidual types checked' mode

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -201,7 +201,8 @@
                                     <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> GENE MUTATION STATUS
                                 </a>
                             </div>
-                            <div id="collapse-gene-mutation-status" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel">
+                            <div id="collapse-gene-mutation-status" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel"
+                                 aria-labelledby="heading-gene-mutation-status" data-feature-name="gene-mutation-status" data-feature-displ-name="Gene Mutation Status" data-feature-type="molecular">
                                 <ul class="list">
                                     <li class="list-item">
                                         <!-- gene selector -->
@@ -226,7 +227,8 @@
                                              aria-labelledby="heading-sel-molecular-attr-cat" data-feature-displ-name="Mutation Category" data-feature-id="category"
                                              data-feature-name="mutation-category" data-feature-type="molecular">
                                             <select id="mutation-category" class="mutation-category-selector form-control spec-select datatype-selector">
-                                                <option value="label" selected disabled>-- Select a Mutation Category --</option>
+                                                <option value="no-gene" selected disabled>-- Select a Gene to Enable These Options --</option>
+                                                <option value="label" disabled>-- Select a Mutation Category --</option>
                                                 <option value="any" data-value-displ-name="Any" data-value-name="Any" data-value-id="any">Any</option>
                                                 {% for cat in molecular_attr.categories %}
                                                     <option value="{{ cat.value }}" data-value-displ-name="{{ cat.name }}" data-value-name="{{ cat.name }}" data-value-id="{{ cat.value }}">{{ cat.name }}</option>
@@ -248,7 +250,7 @@
                                                     <li class="checkbox">
                                                         <label>
                                                             <input class="mutation-checkbox" type="checkbox" name="elements-selected" data-value-name="{{ attr.value }}"
-                                                                   data-value-displ-name="{{ attr.name }}" data-category="{{ attr.category }}">
+                                                                   data-value-id="{{ attr.value }}" data-value-displ-name="{{ attr.name }}" data-category="{{ attr.category }}">
                                                             {{ attr.name }} <!-- <span class="count">({{ attr.count }})</span> -->
                                                         </label>
                                                     </li>
