Reverting some of the previous changes for new ones, specifically:
 -> 'User Specified' is now 'Individual Selection'
 -> A note directing users to choose the 'Individual Selection' to check the Individual Mutation type checkboxes will now appear if the category is not currently on 'Individual Selection'. The note disappears when this category is chosen.
 -> The widget headings will no longer disable.

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -8,6 +8,9 @@
     .total-samples
         margin-top: 0px
     #filter-panel
+        .heading-note
+            font-style: italic
+            color: darken($isb-warning, 20%)
         .checks
             float: right
             display: block
@@ -32,6 +35,9 @@
                     border-top-right-radius: 3px
                 span
                     margin-left: 10px
+            >li.active>a
+                color: darken($isb-warning, 20%) !important
+
 
         .tab-content
             padding: 0px
