--- a/blink_sass/components/_modal.sass
+++ b/blink_sass/components/_modal.sass
@@ -6,6 +6,8 @@
     border-radius: $border-radius-base
     box-shadow: $box-shadow
     border: transparent
+    a.delete-x.label
+      max-width: 90%
 
   &-header
     padding: 24px 24px 20px 24px
