--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -50,7 +50,7 @@
                     <!-- X Axis selection -->
                     <div class="form-group variable-container" variable="x-axis-select">
                         <label for="{{ worksheet.id }}-x-select">X Axis Variable <a role="button" class="x-edit-field" data-attribute="x-selector" aria-label="X Field Editor"></a></label>
-                        <select {% if workbook.owner.id != user.id %} disabled {% endif %} plot="{{ worksheet.id }}" class=" x-axis-select form-control search-term-field" style="width: 230px;">
+                        <select id="{{ worksheet.id }}-x-select" {% if workbook.owner.id != user.id %} disabled {% endif %} plot="{{ worksheet.id }}" class=" x-axis-select form-control search-term-field" style="width: 230px;">
                             {% if plot.x_axis %}
                                 <option value="{{ plot.x_axis.url_code }}" var_id="{{ plot.x_axis.id }}" selected >{{ plot.x_axis.name }}</option>
                             {% else %}
@@ -68,7 +68,7 @@
                                 {% endif %}
                             {% endfor %}
                         </select>
-                        <select class="x-gene-attribute-select form-control spec-select datatype-selector" style="display:none; margin-top:5px; width: 230px;">
+                        <select aria-label="Specification" class="x-gene-attribute-select form-control spec-select datatype-selector" style="display:none; margin-top:5px; width: 230px;">
                             <option value="" type="label" disabled selected>-- select a specification --</option>
                             {% for type in datatype_list %}
                                 <option value="{{ type.datatype }}">{{ type.label}}</option>
@@ -80,8 +80,8 @@
                             <div style="display:none" class="{{ type.datatype }} attr-options form-group search-field">
                                 <div class="search-term" data-field="{{ type.datatype }}">
                                     {% for field in type.fields %}
-                                        <label class="space-top-15">{{ field.label }} Filter</label>
-                                        <select id="{{ field.label }}" class="form-control field-options {{ field.name }}-options {% if not field.static %}select2{% endif %}" data-field="{{ field.name }}">
+                                        <label for="{{ field.label }}-{{ type.datatype }}" class="space-top-15">{{ field.label }} Filter</label>
+                                        <select id="{{ field.label }}-{{ type.datatype }}" class="form-control field-options {{ field.name }}-options {% if not field.static %}select2{% endif %}" data-field="{{ field.name }}">
                                             {% if field.static %}
                                                 <option value="" disabled selected>Please select an option</option>
                                                 {% for value in field.values %}
@@ -92,8 +92,8 @@
                                     {% endfor %}
                                 </div>
                                 <div class="search-term feature-search space-top-15">
-                                    <label for="search-term-select">Select Feature</label>
-                                    <select id="search-term-select" project="{{ TCGA_project.id }}" project_name="{{ TCGA_project.name }}" study="{{ TCGA_project.study.id }}" study_name="{{ TCGA_project.study.name}}" class="search-term-field form-control"></select>
+                                    <label for="search-term-select-x-{{ type.datatype }}">Select Feature</label>
+                                    <select id="search-term-select-x-{{ type.datatype }}" project="{{ TCGA_project.id }}" project_name="{{ TCGA_project.name }}" study="{{ TCGA_project.study.id }}" study_name="{{ TCGA_project.study.name}}" class="search-term-field search-term-select form-control"></select>
                                 </div>
                             </div>
                         {% endfor %}
@@ -107,7 +107,7 @@
                     <!-- Y Axis selection -->
                     <div class="form-group variable-container" variable="y-axis-select">
                         <label for="{{ worksheet.id }}-y-select">Y Axis Variable <a role="button" class="y-edit-field" data-attribute="y-selector" aria-label="Y Field Editor"></a></label>
-                        <select {% if workbook.owner.id != user.id %} disabled {% endif %} plot="{{ worksheet.id }}" class="y-axis-select form-control search-term-field" style="width: 230px;">
+                        <select id="{{ worksheet.id }}-y-select" {% if workbook.owner.id != user.id %} disabled {% endif %} plot="{{ worksheet.id }}" class="y-axis-select form-control search-term-field" style="width: 230px;">
                             {% if plot.y_axis %}
                                 <option value="{{ plot.y_axis.url_code }}" var_id="{{ plot.y_axis.id }}" selected >{{ plot.y_axis.name }}</option>
                             {% else %}
@@ -126,7 +126,7 @@
                                 {% endif %}
                             {% endfor %}
                         </select>
-                        <select class="y-gene-attribute-select form-control spec-select datatype-selector" style="display:none; margin-top:5px; width: 230px;">
+                        <select aria-label="Specification" class="y-gene-attribute-select form-control spec-select datatype-selector" style="display:none; margin-top:5px; width: 230px;">
                             <option type="label" value="" disabled selected>-- select a specification --</option>
                             {% for type in datatype_list %}
                                 <option value="{{ type.datatype }}">{{ type.label}}</option>
@@ -137,7 +137,7 @@
                             <div style="display:none" class="{{ type.datatype }} attr-options form-group search-field">
                                 <div class="search-term" data-field="{{ type.datatype }}">
                                     {% for field in type.fields %}
-                                        <label class="space-top-15">{{ field.label }} Filter</label>
+                                        <label for="{{ field.label }}" class="space-top-15">{{ field.label }} Filter</label>
                                         <select id="{{ field.label }}" class="form-control field-options {{ field.name }}-options {% if not field.static %}select2{% endif %}" data-field="{{ field.name }}">
                                             {% if field.static %}
                                                 <option value="" disabled selected>Please select an option</option>
@@ -149,8 +149,8 @@
                                     {% endfor %}
                                 </div>
                                 <div class="search-term feature-search space-top-15">
-                                    <label for="search-term-select">Select Feature</label>
-                                    <select id="search-term-select" project="{{ TCGA_project.id }}" project_name="{{ TCGA_project.name }}" study="{{ TCGA_project.study.id }}" study_name="{{ TCGA_project.study.name}}" class="search-term-field form-control"></select>
+                                    <label for="search-term-select-y">Select Feature</label>
+                                    <select id="search-term-select-y" project="{{ TCGA_project.id }}" project_name="{{ TCGA_project.name }}" study="{{ TCGA_project.study.id }}" study_name="{{ TCGA_project.study.name}}" class="search-term-field search-term-select form-control"></select>
                                 </div>
                             </div>
                         {% endfor %}
@@ -160,7 +160,7 @@
                     <div class="form-group color-by-group">
                         <label for="color-by">Color By Feature</label>
 {#                        <div class="color-selector filter-label label label-default" type="text" id="color-select" name="color-attr" value="{{ plot.color_by }}">{{ plot.color_by }}</div>#}
-                        <select class="color_by" {% if workbook.owner.id != user.id %} disabled {% endif %} class="form-control search-term-field" style="width: 230px;">
+                        <select id="color-by" class="color_by" {% if workbook.owner.id != user.id %} disabled {% endif %} class="form-control search-term-field" style="width: 230px;">
                             {% if plot.color_by %}
                                 <option value="{{ plot.color_by.url_code }}" var_id="{{ plot.color_by.id }}" selected >{{ plot.color_by.name }}</option>
                             {% else %}
@@ -171,7 +171,7 @@
 
                     <!-- Gene Label for SeqPeek -->
                     <div class="form-group seqpeek-genes">
-                        <label for="{{ worksheet.id }}-gene-label-select">Gene</label>
+                        <label for="gene_label">Gene</label>
                         <select id="gene_label" {% if workbook.owner.id != user.id %} disabled {% endif %} class="form-control search-term-field" style="width: 230px;">
                             {% if plot.gene_label %}
                                 <option value="{{ plot.gene_label }}" selected >{{ plot.gene_label }}</option>
