--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -84,6 +84,12 @@
 {% endblock %}
 
 {% block content %}
+
+    <div id="url-len-max-alert" class="alert alert-warning alert-dismissable col-lg-12" style="display: none;">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        You have selected too many filters. The current counts shown will not be accurate until one or more filter options are removed.
+    </div>
+
     <div id="filter-panel" class="col-lg-4 col-md-4" style="display:none;">
         <div class="tabpanel" role="tabpanel">
             <ul class="nav nav-tabs" role="tablist">
