--- a/templates/GenespotRE/register_sa.html
+++ b/templates/GenespotRE/register_sa.html
@@ -73,7 +73,7 @@
                             <tr>
                                 <th>User Email</th>
                                 <th>Registered</th>
-                                <th>Has eRA Commons</th>
+                                <th>Has NIH Identity</th>
                                 <th>Authorized Datasets</th>
                             </tr>
                             </thead>
