-> bug 1524: variable favorite set names, as well as cohort and gene favorite set names, will now truncate to ellipsis on the list pages. The full name will be visible as a wrapped title text  -> Set a varying max-width for the name column of the variable and gene favorite set list tables, since these tables have few columns and the max-width set for the cohort table (which has a large nunber of columns) was too restrictive

--- a/blink_sass/components/_table.sass
+++ b/blink_sass/components/_table.sass
@@ -6,9 +6,24 @@
     color: $base-dark
     font-weight: $medium-font-weight
 
-  .name-col
-    max-width: 600px
-    
+  .name-col, .name-col a
+    max-width: 500px
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
+    a
+      display: inline-block
+      width: 100%
+
+#gene-list-table, #var-list-table
+  .name-col, .name-col a
+    @media screen and (max-width: 1199px)
+      max-width: 600px
+    @media screen and (min-width: $screen-lg)
+      max-width: 750px
+
+
+
 .share-col a
   color: $isb-info
   cursor: pointer
