--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -97,6 +97,9 @@
                                 </div>
                             </div>
                         {% endfor %}
+                        <label for="x-log-scale">
+                            <input id="x-log-scale" type="checkbox" class="log-scale"> Use log(x) for axis scale
+                        </label>
                     </div>
 
                     <!-- Swap selection -->
@@ -154,6 +157,9 @@
                                 </div>
                             </div>
                         {% endfor %}
+                        <label for="y-log-scale">
+                            <input id="y-log-scale" type="checkbox" class="log-scale"> Use log(y) for axis scale
+                        </label>
                     </div>
 
                     <!-- Color By variable. only offer x and y selections-->
