-> Filter tokens displayed in the save cohort confirmation dialog will now attempt to always show their entire text unless they are more than 90% of the width of the dialog, at which point they will truncate to ... -> Added title attribute to all filter tokens for on-hover full-text access; this text does not currently wrap -> Fixed a bug where Tobacco Smoking History was erroneously mapping to other display tags

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -180,6 +180,7 @@
 
     #create-cohort-form .form-control-static span
         display: inline-block
+        max-width: 90%
 
     #multi-categorical
         overflow-x: auto
