--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -97,9 +97,10 @@
                                 </div>
                             </div>
                         {% endfor %}
-                        <label for="x-log-scale">
+<!--                        <label for="x-log-scale">
                             <input id="x-log-scale" type="checkbox" class="log-scale"> Use log(x) for axis scale
                         </label>
+-->
                     </div>
 
                     <!-- Swap selection -->
@@ -157,9 +158,11 @@
                                 </div>
                             </div>
                         {% endfor %}
+<!--
                         <label for="y-log-scale">
                             <input id="y-log-scale" type="checkbox" class="log-scale"> Use log(y) for axis scale
                         </label>
+-->
                     </div>
 
                     <!-- Color By variable. only offer x and y selections-->
