fixed small UI issues in project listing for public projects.

--- a/blink_sass/pages/_projects.sass
+++ b/blink_sass/pages/_projects.sass
@@ -128,3 +128,11 @@
     border: none
     background-color: transparent
     padding: 0
+
+  .study .name-col
+    overflow: visible
+
+    a[data-toggle="dropdown"]
+      width: 20px
+      vertical-align: middle
+      line-height: 0em
